Add Grafana Faro RUM integration
- Install @grafana/faro-web-sdk and @grafana/faro-web-tracing packages
- Add Faro initialization script (faro-init.js) with ES module imports
- Configure server to serve Faro node_modules for browser imports
- Add import maps to all HTML pages for Faro module loading
- Add custom event tracking (checkout, errors, activity generation)
- Move collector URL to environment variable (FARO_COLLECTOR_URL)
- Add /api/faro-config endpoint to securely serve collector URL
- Update README with comprehensive RUM metrics and events documentation
- Update .gitignore for environment files
- Enhance app.js with Faro event tracking helpers

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEM Playground - Home</title>
     <link rel="stylesheet" href="/styles.css">
+    <script type="importmap">
+    {
+      "imports": {
+        "@grafana/faro-web-sdk": "/node_modules/@grafana/faro-web-sdk/dist/esm/index.js",
+        "@grafana/faro-web-tracing": "/node_modules/@grafana/faro-web-tracing/dist/esm/index.js"
+      }
+    }
+    </script>
+    <script type="module" src="/faro-init.js"></script>
 </head>
 <body>
     <div class="container">
