Add error all out button

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,11 @@
                     <button id="btn-generate-activity" class="btn-primary">Generate Activity</button>
                     <p class="help-text">Simulates user activity: navigates pages and makes API calls</p>
                 </div>
+
+                <div class="control-group">
+                    <button id="btn-error-spike" class="btn-danger">Trigger Error Spike</button>
+                    <p class="help-text">Generates 100+ errors: JavaScript errors + failed API calls (for testing error storm detection)</p>
+                </div>
             </section>
         </main>
     </div>
