--- a/public/checkout.html
+++ b/public/checkout.html
@@ -9,35 +9,36 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Checkout</h1>
-            <div class="version" id="version">Loading...</div>
+        <header data-testid="page-header">
+            <h1 data-testid="page-title">Checkout</h1>
+            <div class="version" id="version" data-testid="app-version">Loading...</div>
         </header>
 
-        <nav>
-            <a href="/">Home</a>
-            <a href="/checkout">Checkout</a>
-            <a href="/status">Status</a>
+        <nav data-testid="main-nav">
+            <a href="/" data-testid="nav-home">Home</a>
+            <a href="/products" data-testid="nav-products">Products</a>
+            <a href="/checkout" data-testid="nav-checkout">Checkout</a>
+            <a href="/status" data-testid="nav-status">Status</a>
         </nav>
 
         <main>
-            <section class="checkout-form">
+            <section class="checkout-form" data-testid="checkout-section">
                 <h2>Fake Checkout</h2>
-                <form id="checkout-form">
+                <form id="checkout-form" data-testid="checkout-form">
                     <div class="form-group">
                         <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="name" required data-testid="checkout-name">
                     </div>
                     
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" required data-testid="checkout-email">
                     </div>
                     
-                    <button type="submit" class="btn-primary">Submit Order</button>
+                    <button type="submit" class="btn-primary" data-testid="checkout-submit">Submit Order</button>
                 </form>
 
-                <div id="checkout-message" class="message"></div>
+                <div id="checkout-message" class="message" data-testid="checkout-message"></div>
             </section>
         </main>
     </div>
