--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>DEM Playground</h1>
-            <div class="version" id="version">Loading...</div>
+        <header data-testid="page-header">
+            <h1 data-testid="page-title">DEM Playground</h1>
+            <div class="version" id="version" data-testid="app-version">Loading...</div>
         </header>
 
-        <nav>
-            <a href="/">Home</a>
-            <a href="/checkout">Checkout</a>
-            <a href="/status">Status</a>
+        <nav data-testid="main-nav">
+            <a href="/" data-testid="nav-home">Home</a>
+            <a href="/products" data-testid="nav-products">Products</a>
+            <a href="/checkout" data-testid="nav-checkout">Checkout</a>
+            <a href="/status" data-testid="nav-status">Status</a>
         </nav>
 
         <main>
@@ -30,7 +31,7 @@
                 <h2>Failure Toggles</h2>
                 
                 <div class="control-group">
-                    <button id="btn-js-error" class="btn-danger">Trigger JS Error</button>
+                    <button id="btn-js-error" class="btn-danger" data-testid="btn-js-error">Trigger JS Error</button>
                     <p class="help-text">Intentionally throws a JavaScript error</p>
                 </div>
 
@@ -58,12 +59,12 @@
                 </div>
 
                 <div class="control-group">
-                    <button id="btn-generate-activity" class="btn-primary">Generate Activity</button>
+                    <button id="btn-generate-activity" class="btn-primary" data-testid="btn-generate-activity">Generate Activity</button>
                     <p class="help-text">Simulates user activity: navigates pages and makes API calls</p>
                 </div>
 
                 <div class="control-group">
-                    <button id="btn-error-spike" class="btn-danger">Trigger Error Spike</button>
+                    <button id="btn-error-spike" class="btn-danger" data-testid="btn-error-spike">Trigger Error Spike</button>
                     <p class="help-text">Generates 100+ errors: JavaScript errors + failed API calls (for testing error storm detection)</p>
                 </div>
             </section>
