--- a/public/status.html
+++ b/public/status.html
@@ -9,24 +9,25 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Status Monitor</h1>
-            <div class="version" id="version">Loading...</div>
+        <header data-testid="page-header">
+            <h1 data-testid="page-title">Status Monitor</h1>
+            <div class="version" id="version" data-testid="app-version">Loading...</div>
         </header>
 
-        <nav>
-            <a href="/">Home</a>
-            <a href="/checkout">Checkout</a>
-            <a href="/status">Status</a>
+        <nav data-testid="main-nav">
+            <a href="/" data-testid="nav-home">Home</a>
+            <a href="/products" data-testid="nav-products">Products</a>
+            <a href="/checkout" data-testid="nav-checkout">Checkout</a>
+            <a href="/status" data-testid="nav-status">Status</a>
         </nav>
 
         <main>
-            <section class="status-display">
+            <section class="status-display" data-testid="status-section">
                 <h2>Health Status</h2>
                 <div class="status-grid">
                     <div class="status-item">
                         <label>Status:</label>
-                        <span id="status-ok" class="status-badge">Loading...</span>
+                        <span id="status-ok" class="status-badge" data-testid="status-ok">Loading...</span>
                     </div>
                     
                     <div class="status-item">
